@@ -6,7 +6,6 @@ start-stop-daemon
 dpkg
 * configuration-file with default options
 * signatures & checksums
-* seperate maintainer and last-changed-by entries in .changes (should be done)
 * integrate debconf (add new status)
 * allow external program to specify how to handle conffiles
 * integrate suidmanager
