@@ -5,6 +5,10 @@ dpkg (1.7.0) unstable; urgency=low
   * dpkg-architecture: -q should not imply -f, Closes: Bug#57761
   * add dpkg:UpstreamVersion and dpkg:Version substvars in dpkg-genchanges.
     Closes: Bug#62069
+  * dpkg-genchanges: add new Changed-By field to .changes with the last
+    person who made a change, and modify the Maintainer-field to be the
+    actual maintainer. Update the format-version to 1.7 to reflect this.
+  * dpkg-genchanges: allow a space between # and a to-be-closed bugnumber
 
  -- Wichert Akkerman <wakkerma@debian.org>  UNRELEASED
 
