@@ -1,5 +1,9 @@
 Thu Apr 13 09:57:52 EDT 2000 Wichert Akkerman <wakkerma@debian.org>
 
+  * configure.in: add -D_GNU_SOURCE to CFLAGS so we can get strsignal
+  * scripts/dpkg-genchanges.pl: output Changed-By just after Maintainer
+  * scripts/cl-debian.pl: really allow a single whitespace to between # and
+    a bugnumber that will be closed.
   * Synchronize with potato-branch again:
     + scripts/dpkg-divert.pl: fixed typo
     + debian/dpkg-dev.{postinst,prerm}: remove emacsen-common stuff
